--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Oxygen&family=Ubuntu:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Thomas Allen</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
